--- a/src/debian/changelog
+++ b/src/debian/changelog
@@ -1,3 +1,10 @@
+blubuntu (0.9.3) saucy; urgency=high
+
+  * change default backgound image into blue
+
+ -- Nattawut Phetmak <neizod@gmail.com>  Sun, 20 Oct 2013 12:37:42 +0700
+
+
 blubuntu (0.9.2) saucy; urgency=high
 
   * blue plymouth theme
